syntax = "proto3";

package pb;
option go_package = "github.com/rruzicic/globetrotter/bnb/reservation-service/pb";
import "google/protobuf/timestamp.proto";

message Reservation{
    string accommodationId = 1;
    string userId = 2;
    google.protobuf.Timestamp startDate = 3;
    google.protobuf.Timestamp endDate = 4;
    int32 numOfGuests = 5;
    bool isApproved = 6;
    float totalPrice = 7;
}

message RequestReservationById{
    string id = 1;
}

message RequestReservationsByAccommodationId{
    string id = 1;
}

service ReservationService {
    rpc GetReservationById(RequestReservationById) returns (Reservation) {}
    rpc GetReservationsByAccommodationId(RequestReservationsByAccommodationId) returns (stream Reservation) {}
}

